crates/plotnik-lib/tests/02-parser/recovery_validation/lowercase_branch_labels_cascade.txt
[
  left: (a)
  right: (b)
]
------------------ DIAGNOSTICS -------------------
error: branch labels must be PascalCase
 --> query.ptk:2:3
  |
2 |   left: (a)
  |   ^^^^
  |
help: use `Left`
  |
2 -   left: (a)
2 +   Left: (a)
  |
help: branch labels become variants of an enum in the output

error: branch labels must be PascalCase
 --> query.ptk:3:3
  |
3 |   right: (b)
  |   ^^^^^
  |
help: use `Right`
  |
3 -   right: (b)
3 +   Right: (b)
  |
help: branch labels become variants of an enum in the output
